[package]
name = "tsps"
version = "0.6.0"
edition = "2024"
description = "Quickly set up tmux workspaces by splitting windows into multiple panes"
license = "MIT"
repository = "https://github.com/yysd5/tsps"
authors = ["yyossy5 <hm.hr.yossy@gmail.com>"]
homepage = "https://github.com/yysd5/tsps"
readme = "README.md"
keywords = ["tmux", "cli", "terminal", "workspace"]
categories = ["command-line-utilities"]

[[bin]]
name = "tsps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
